--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node src/server/server.js",
     "build": "webpack --config webpack.dev.js",
-    "build-dev": "webpack-dev-server --config webpack.dev.js --open",
+    "build-dev": "webpack serve --config webpack.dev.js --open",
     "build-prod": "webpack --config webpack.prod.js"
   },
   "repository": {
