added and installed dotenv

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/dlorenzocodes/travel-planner-app#readme",
   "dependencies": {
     "axios": "^0.24.0",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "webpack": "^5.64.1",
     "webpack-cli": "^4.9.1",
