--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --env=jsdom",
     "start": "node src/server/server.js",
     "build": "webpack --config webpack.dev.js",
     "build-dev": "webpack serve --config webpack.dev.js --open",
@@ -36,10 +36,12 @@
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.5.1",
     "html-webpack-plugin": "^5.5.0",
+    "jest": "^27.4.3",
     "mini-css-extract-plugin": "^2.4.5",
     "sass": "^1.43.4",
     "sass-loader": "^12.3.0",
     "style-loader": "^3.3.1",
+    "supertest": "^6.1.6",
     "webpack-dev-server": "^4.5.0"
   }
 }
