--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "sass-loader": "^12.3.0",
     "style-loader": "^3.3.1",
     "supertest": "^6.1.6",
-    "webpack-dev-server": "^4.5.0"
+    "webpack-dev-server": "^4.5.0",
+    "workbox-webpack-plugin": "^6.4.2"
   }
 }
