--- a/package.json
+++ b/package.json
@@ -36,6 +36,12 @@
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.5.1",
     "html-webpack-plugin": "^5.5.0",
+    "image-minimizer-webpack-plugin": "^3.1.2",
+    "imagemin": "^8.0.1",
+    "imagemin-gifsicle": "^7.0.0",
+    "imagemin-mozjpeg": "^10.0.0",
+    "imagemin-pngquant": "^9.0.2",
+    "imagemin-svgo": "^10.0.1",
     "jest": "^27.4.3",
     "mini-css-extract-plugin": "^2.4.5",
     "regenerator-runtime": "^0.13.9",
